fix: remove gap around body

--- a/lambdas/page-deploy-site/src/templates/page-standard/page-standard.css
+++ b/lambdas/page-deploy-site/src/templates/page-standard/page-standard.css
@@ -1,6 +1,7 @@
 body {
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 .container {
